@@ -1,14 +1,33 @@
-ActionController::Routing::Routes.draw do |map|
-  map.namespace :documentation do |doc|
-    doc.feature_show 'features/:id', :requirements => { :id => /.*[^(\/(edit|statistic))]/}, :conditions => { :method => :get },
-                     :controller => 'features',
-                     :action => 'show'
-    doc.feature_update 'features/:id', :requirements => { :id => /.*[^(\/edit)]/}, :conditions => { :method => :post },
+if Rails::VERSION::STRING =~ /^2\.3/
+  ActionController::Routing::Routes.draw do |map|
+    map.namespace :documentation do |doc|
+      doc.feature_show 'features/:id', :requirements => {:id => /.*[^(\/(edit|statistic))]/}, :conditions => {:method => :get},
                        :controller => 'features',
-                       :action => 'update'
-    doc.resources :features, :member => [:rename, :move, :delete], :collection => [:statistic]
-    doc.resource :kanban, :controller => 'kanban'
-    doc.connect "assets/:path", :controller => 'assets', :action => 'get',
-                :requirements => { :path => /.*/ }
+                       :action => 'show'
+      doc.feature_update 'features/:id', :requirements => {:id => /.*[^(\/edit)]/}, :conditions => {:method => :post},
+                         :controller => 'features',
+                         :action => 'update'
+      doc.resources :features, :member => [:rename, :move, :delete], :collection => [:statistic]
+      doc.connect "assets/:path", :controller => 'assets', :action => 'get',
+                  :requirements => {:path => /.*/}
+    end
+  end
+else
+  Rails.application.routes.draw do
+    namespace :documentation do
+      get 'features/:id', 'features#show', :constraints => {:id => /.*[^(\/(edit|statistic))]/},
+            :as => :feature_show
+      post 'features/:id', 'features#update', :constraints => {:id => /.*[^(\/edit)]/},
+            :as => :feature_update
+      resources :features  do
+        get 'statistic', :on => :collection
+        member do
+          match 'rename'
+          match 'move'
+          match 'delete'
+        end
+      end
+      get 'assets/:path', "assets#get", :constraints => {:path => /.*/}
+    end
   end
 end
