@@ -1,3 +1,5 @@
+* fix - rails 3 routing
+* spliting core functionality into gem
 * fix - when aggregating data skip technical tags
 * fix - drawing navigation in editor for scenario outline
 * fix - problem with parsing scenario outline
